# velogate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
editor/: index.html  package-lock.json  package.json  vite.config.js
editor/src/: App.svelte  FlowCanvas.svelte  GateNode.svelte  HeaderBar.svelte  InspectorPanel.svelte  Rail.svelte  SourceEditor.svelte  main.js  styles.css
editor/src/lib/: dsl.js  endpointVisibility.js  expressions.js  graph.js  pipe.js
examples/: example.env  main.gate
examples/cases/: 01_read_routes.gate  02_write_body.gate  03_jwt_secure.gate  04_basic_env_constants.gate  05_builtins_and_variable_take.gate  06_sync_and_command.gate  07_pipe_aggregators.gate  secure.example.env
src/: ast.rs  dev.rs  export.rs  grammar.lalrpop  lexer.rs  lib.rs  linter.rs  main.rs  parser.rs  planner.rs  runtime.rs  validator.rs
src/runtime/: functions.rs  mod.rs  tests.rs  traits.rs  types.rs
src/runtime/rate_limit/: functions.rs  mod.rs  traits.rs  types.rs
src/runtime/security/: functions.rs  mod.rs  types.rs
tests/: dump_fixtures.rs  gate_examples.rs
tests/fixtures/: dump.gate  dump.graph.dot  dump.json  dump.openapi.json
