[package]
name = "velogate"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.23.1"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ariadne = { version = "0.6.0" }
lasso = { version = "0.7.3", features = ["multi-threaded", "ahasher"] }

logos = "0.16.1"
lalrpop-util = { version = "0.23.1", features = ["lexer"] }

tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["json", "macros", "matched-path", "ws"] }
reqwest = { version = "0.13.4", features = ["json"] }
rust-embed = "8.9"
mime_guess = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
base64 = "0.22"
dashmap = "6.1"

tower = { version = "0.5.3", features = ["util"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "postgres", "mysql", "sqlite"] }
tonic = "0.14.6"
prost = "0.14.3"
prost-types = "0.14.3"
http = "1.4.1"
tonic-prost = "0.14.6"
prost-reflect = { version = "0.16.4", features = ["serde"] }
protox = "0.9.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
